# DBCProcessor

./: CMakeLists.txt  readme.md
CANDBCProcessor/: CCANMessageProcessor.cpp  CCANMessageProcessor.h  CDBCFileParser.cpp  CDBCFileParser.h  CDBCInfoBuilder.cpp  CDBCInfoBuilder.h  CDBCVerifier.cpp  CDBCVerifier.h  CLoggerMsg.cpp  CLoggerMsg.h  CLowPassFilter.cpp  CLowPassFilter.h  CMakeLists.txt  CMessage.cpp  CMessage.h  CMessageProcessor.cpp  CMessageProcessor.h  CMessageTemplate.cpp  CMessageTemplate.h  CMultiplexedMessageProcessor.cpp  CMultiplexedMessageProcessor.h  CSignal.cpp  CSignal.h  CSignalValueTemplate.cpp  CSignalValueTemplate.h  CSimpleLogger.cpp  CSimpleLogger.h  CSimpleMessageProcessor.cpp  CSimpleMessageProcessor.h  CValue.cpp  CValue.h  CValueDictionary.cpp  CValueDictionary.h  CValueIntegrator.cpp  CValueIntegrator.h  CVerifyMultiplexIndexes.cpp  CVerifyMultiplexIndexes.h  CVerifyPositionLength.cpp  CVerifyPositionLength.h  CVerifySignalOverlay.cpp  (+14 more)
DBCs/: CAN_FMS.dbc
test/: CANProcessorTest.cpp  CCANMessageProcessorTest.cpp  CDBCFileParserTest.cpp  CDBCVerifierTest.cpp  CLowPassFilterTests.cpp  CMakeLists.txt  CMessageListenerMock.h  CSignalListenerMock.h  CSignalTest.cpp  CValueDictionary_Test.cpp  CValueIntegratorTest.cpp  CValueTest.cpp  CascadeLoading.cpp  IMessageListenerTest.cpp  MessageListenerTest.cpp  MultiplexedProcessing.cpp
test/testData/: basic.dbc  basicExceeded.dbc  cascadeLvl1.dbc  cascadeLvl2a.dbc  cascadeLvl2b.dbc  multiplexed.dbc  multiplexed_broken.dbc  verfication_overlayedSignals.dbc
